@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[33] --> Add script Allow Two Side Interaction Chat.
 [32] --> Add Armory Patch.
 [31] --> Fix crash script Chat Censure.
 [30] --> Add script Chat Censure.
